--- a/cameratest/cameratest/cameratest.Droid/packages.config
+++ b/cameratest/cameratest/cameratest.Droid/packages.config
@@ -3,6 +3,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.Permissions" version="1.1.7" targetFramework="monoandroid60" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Media" version="2.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
