--- a/cameratest/cameratest/cameratest.iOS/cameratest.iOS.csproj
+++ b/cameratest/cameratest/cameratest.iOS/cameratest.iOS.csproj
@@ -131,6 +131,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
