--- a/cameratest/cameratest/cameratest/packages.config
+++ b/cameratest/cameratest/cameratest/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xam.Plugin.Media" version="2.3.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
