--- a/cameratest/cameratest/cameratest.Droid/packages.config
+++ b/cameratest/cameratest/cameratest.Droid/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="KeyChain.Net" version="0.0.4" targetFramework="monoandroid60" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid60" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Media" version="2.6.1" targetFramework="monoandroid60" />
-
+  <package id="Xam.Plugins.Settings" version="2.5.4" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
