--- a/cameratest/cameratest/cameratest.iOS/packages.config
+++ b/cameratest/cameratest/cameratest.iOS/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="KeyChain.Net" version="0.0.4" targetFramework="xamarinios10" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.6.1" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Settings" version="2.5.4" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.1.114" targetFramework="xamarinios10" />
 </packages>
