--- a/cameratest/cameratest/cameratest.iOS/cameratest.iOS.csproj
+++ b/cameratest/cameratest/cameratest.iOS/cameratest.iOS.csproj
@@ -89,6 +89,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Helpers\Settings.cs" />
+    <Compile Include="Localize.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="app.config" />
