--- a/cameratest/cameratest/cameratest/cameratest.csproj
+++ b/cameratest/cameratest/cameratest/cameratest.csproj
@@ -37,6 +37,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
+    <Compile Include="FAQ.xaml.cs">
+      <DependentUpon>FAQ.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ILocalize.cs" />
     <Compile Include="PlatformCulture.cs" />
     <Compile Include="TranslateExtension.cs" />
@@ -61,6 +64,9 @@
     </Compile>
     <Compile Include="resetPassword.xaml.cs">
       <DependentUpon>resetPassword.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Videos.xaml.cs">
+      <DependentUpon>Videos.xaml</DependentUpon>
     </Compile>
     <Compile Include="ZoomPic.xaml.cs">
       <DependentUpon>ZoomPic.xaml</DependentUpon>
@@ -185,6 +191,18 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="resetPassword.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="FAQ.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Videos.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
