Appname auf ServiceApp geändert

--- a/cameratest/cameratest/cameratest.Droid/Properties/AndroidManifest.xml
+++ b/cameratest/cameratest/cameratest.Droid/Properties/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.ACCESS_CHECKIN_PROPERTIES" />
-	<application android:label="$safeprojectname$" android:theme="@android:style/Theme.Holo.Light" android:icon="@drawable/icon">
+	<application android:label="ServiceApp" android:theme="@android:style/Theme.Holo.Light" android:icon="@drawable/icon">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="cameratest.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
 		</provider>
