--- a/cameratest/cameratest/cameratest/cameratest.csproj
+++ b/cameratest/cameratest/cameratest/cameratest.csproj
@@ -42,6 +42,9 @@
     </Compile>
     <Compile Include="ILocalize.cs" />
     <Compile Include="PlatformCulture.cs" />
+    <Compile Include="Question.xaml.cs">
+      <DependentUpon>Question.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TranslateExtension.cs" />
     <Compile Include="AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -203,6 +206,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Videos.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Question.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
